--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=123456
-POSTGRES_DATABASE=testdb
-PORT=3002
-MODE=DEV
-RUN_MIGRATIONS=true
+DB_NAME=TableTest
+DATABASE_USER=postgres
+DATABASE_PASSWORD=123456
+
+# PORT=3002
+# MODE=DEV
+# RUN_MIGRATIONS=true
