--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ DATABASE_PASSWORD=123456
 # PORT=3002
 # MODE=DEV
 # RUN_MIGRATIONS=true
+
+
+
+JWT_SECRET = "Check the spelling of the name, or if a path was included"
