--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.0 //authendication",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.0 //authendication",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.0 //HashPassword",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "passport": "^0.6.0 ",
+    "passport-jwt": "^4.0.1 //authendication",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
